--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#880e4f</color>
+    <color name="colorPrimaryDark">#730c43</color>
+    <color name="colorAccent">#0D811B</color>
+
+    <color name="blanco">#FFF</color>
 </resources>
