--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#0D811B</color>
 
     <color name="blanco">#FFF</color>
+    <color name="gris_claro">#e7e4e4</color>
+    <color name="negro_semitransparente">#3c000000</color>
 </resources>
