Agrego listener de posicion para MainActitivy
Con el patron observador se pueden suscribir los fragmentos a los
cambios en la posicion

--- a/app/src/main/res/layout/fragment_rutas.xml
+++ b/app/src/main/res/layout/fragment_rutas.xml
@@ -55,4 +55,12 @@
 
     </RelativeLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_add_posicion_a_ruta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="25dp"
+        android:src="@drawable/ic_add_location" />
+
 </FrameLayout>
