Agrego mapa al fragment de bloques

--- a/app/src/main/res/layout/fragment_bloques.xml
+++ b/app/src/main/res/layout/fragment_bloques.xml
@@ -5,9 +5,23 @@
     android:layout_height="match_parent"
     tools:context=".fragmentos.BloquesFragment">
 
-    <TextView
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/map_bloques"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_add_bloque"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="25dp"
+        android:src="@drawable/ic_add" />
+
+    <ProgressBar
+        android:id="@+id/progress_bloques"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
