--- a/app/src/main/res/layout/fragment_rutas.xml
+++ b/app/src/main/res/layout/fragment_rutas.xml
@@ -6,13 +6,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:map="http://schemas.android.com/apk/res-auto">
 
-    <fragment
+    <com.google.android.gms.maps.MapView
         android:id="@+id/map_rutas"
-        class="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="helpers.cristian.com.mapaunicorhelper.fragmentos.RutasFragment"/>
-
+        android:layout_height="match_parent"/>
 
     <RelativeLayout
         android:background="@color/negro_semitransparente"
@@ -62,5 +59,11 @@
         android:layout_gravity="bottom|right"
         android:layout_margin="25dp"
         android:src="@drawable/ic_add_location" />
+
+    <ProgressBar
+        android:id="@+id/progress_rutas"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
