Add Firebase Crashlitycs

--- a/app/src/main/res/layout/activity_set_ubicacion.xml
+++ b/app/src/main/res/layout/activity_set_ubicacion.xml
@@ -110,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
-            android:backgroundTint="@color/rojo"
+            app:backgroundTint="@color/rojo"
             android:src="@drawable/ic_equis_blanca" />
     </LinearLayout>
 
