--- a/app/src/main/res/layout/activity_set_ubicacion.xml
+++ b/app/src/main/res/layout/activity_set_ubicacion.xml
@@ -114,4 +114,27 @@
             android:src="@drawable/ic_equis_blanca" />
     </LinearLayout>
 
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/layout_cargando_ubicacion"
+        android:background="#A3000000"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:text="Cargando ubicación"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
 </RelativeLayout>
